# heterowave

./: .gitignore  AGENTS.md  HETEROWAVE_CODEX_IMPLEMENTATION_PLAN.md  README.md  environment.yml  pyproject.toml  test.ipynb
autoresearch/: README.md  candidate.py  loop.py  program.md  results.tsv  runner.py
configs/: colab_baseline.yaml  colab_fbpconvnet.yaml  colab_full.yaml  colab_heterowave.yaml  colab_heterowave_gated_pooling.yaml  colab_heterowave_set_transformer_pooling.yaml  colab_heterowave_tempered_precision.yaml  colab_heterowave_v2.yaml  colab_heterowave_v3.yaml  colab_heterowave_v3_robust.yaml  colab_learned_primal_dual.yaml  colab_masked_baseline.yaml  colab_phase7_physics.yaml  local_fbpconvnet_smoke.yaml  local_heterowave_gated_pooling_smoke.yaml  local_heterowave_set_transformer_pooling_smoke.yaml  local_heterowave_smoke.yaml  local_heterowave_tempered_precision_smoke.yaml  local_heterowave_v2_smoke.yaml  local_heterowave_v3_smoke.yaml  local_learned_primal_dual_smoke.yaml  local_masked_unet_smoke.yaml  local_phase7_smoke.yaml  local_smoke.yaml  research_benchmark.yaml  validation_masks_seed1337.json
notebooks/: colab_setup.ipynb  visualize_physics.ipynb
scripts/: download_openbreastus.py  generate_validation_masks.py  inspect_mat.py  prepare_cache.py  sync_results_to_drive.py  verify_environment.py  visualize_physics.py
tests/: test_backprojector.py  test_cache.py  test_config.py  test_evaluation.py  test_external_baselines.py  test_heterowave.py  test_heterowave_v2.py  test_heterowave_v3.py  test_masks.py  test_mat_loader.py  test_model_shapes.py  (+4 more)
(+34 files in other folders)
