[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heterowave"
version = "0.1.0"
description = "Straight-ray tomography physics prototype for HeteroWave"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "h5py>=3.10",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "scipy>=1.12",
    "torch>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
